After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762434 - multifilesink: close file on write error with next-file mode is set to buffer
multifilesink: close file on write error with next-file mode is set to buffer
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-22 10:58 UTC by Aurélien Zanelli
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
multifilesink: close file on write error with next-file mode is set to buffer (1.35 KB, patch)
2016-02-22 11:03 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2016-02-22 10:58:31 UTC
When using a multifilesink with next-mode set to buffer, if we have an error during a fwrite call, the file stays open and if application handles the GST_FLOW_ERROR and doesn't restart multifilesink by doing a state change, the next incoming buffer will trigger and assert when trying to opening the next file:

CRITICAL **: gst_multi_file_sink_open_next_file: assertion 'multifilesink->file == NULL' failed

Closing the file after a write error allows element to recover.
Comment 1 Aurélien Zanelli 2016-02-22 11:03:16 UTC
Created attachment 321822 [details] [review]
multifilesink: close file on write error with next-file mode is set to buffer
Comment 2 Sebastian Dröge (slomo) 2016-02-23 09:36:28 UTC
Attachment 321822 [details] pushed as 84e441d - multifilesink: close file on write error with next-file mode is set to buffer